@startuml StewartPlatformControlSystem

title Stewart Platform Control System - Klassediagram
footer Objektorientert Python-design | Raspberry Pi 4B | 6-DOF

' ── Stil ───────────────────────────────────────────────────
skinparam classAttributeIconSize 0
skinparam classFontSize    11
skinparam packageFontSize  13
skinparam packageStyle     rectangle
skinparam linetype         ortho
skinparam nodesep          60
skinparam ranksep          50
skinparam shadowing        false

skinparam class {
    BackgroundColor   White
    BorderColor       #444444
    ArrowColor        #666666
    FontColor         #222222
}

' ── Layout-hint: pakker plassert i rader ──────────────────
' Rad 1: config (oeverst)
' Rad 2: geometry | hardware
' Rad 3: kinematics | servo
' Rad 4: control | safety (MotionController nederst)

' ════════════════════════════════════════════════════════════
' RAD 1 – Konfigurasjon
' ════════════════════════════════════════════════════════════
package "config" #E8F5E9 {

    class ServoConfig <<dataclass>> {
        + channel : int = 0
        + min_pulse_us / max_pulse_us : int
        + min_angle_deg / max_angle_deg : float
        + home_angle_deg : float = 90.0
        + direction : int = 1
        + offset_deg : float = 0.0
        + mounting_angle_deg : float = 0.0
    }

    class PIDGains <<dataclass>> {
        + kp / ki / kd : float
        + output_min / output_max : float
        + integral_limit : float = 100.0
    }

    class SafetyConfig <<dataclass>> {
        + max_translation_mm : float = 50.0
        + max_rotation_deg : float = 30.0
        + max_velocity_mm_per_s : float
        + max_angular_velocity_deg_per_s : float
        + servo_angle_margin_deg : float
        + watchdog_timeout_s : float = 1.0
        + imu_fault_threshold_g : float = 4.0
    }

    class PlatformConfig <<dataclass>> {
        .. I2C-adresser ..
        + i2c_bus_number : int = 1
        + pca9685_address : int = 0x40
        + lsm6dsox_address : int = 0x6A
        .. Geometri ..
        + base_radius / platform_radius : float
        + base_joint_angles : list[float]
        + platform_joint_angles : list[float]
        + servo_horn_length / rod_length : float
        + home_height : float = 120.0
        .. Komposisjon ..
        + servo_configs : list[ServoConfig]
        + pid_gains : PIDGains
        + safety_config : SafetyConfig
        + control_loop_rate_hz : float = 50.0
        --
        + {static} load(filepath: str) : PlatformConfig
        + save(filepath: str) : None
        + validate() : None
    }

    PlatformConfig "1" *-r- "6" ServoConfig
    PlatformConfig "1" *-l- "1" PIDGains
    PlatformConfig "1" *-l- "1" SafetyConfig
}

' ════════════════════════════════════════════════════════════
' RAD 2 VENSTRE – Geometri
' ════════════════════════════════════════════════════════════
package "geometry" #FFF3E0 {

    class Vector3 {
        + x : float
        + y : float
        + z : float
        --
        + __add__(other: Vector3) : Vector3
        + __sub__(other: Vector3) : Vector3
        + __mul__(scalar: float) : Vector3
        + __neg__() : Vector3
        + magnitude() : float
        + normalized() : Vector3
        + dot(other: Vector3) : float
        + cross(other: Vector3) : Vector3
        + to_array() : np.ndarray
        + {static} from_array(arr: np.ndarray) : Vector3
    }

    class Pose {
        + translation : Vector3
        + rotation : Vector3
        --
        + to_matrix() : np.ndarray
        + {static} from_matrix(m: np.ndarray) : Pose
        + interpolate(other: Pose, t: float) : Pose
        + is_within_bounds(max_trans: float, max_rot: float) : bool
        + {static} home() : Pose
    }

    class PlatformGeometry {
        - _base_radius : float
        - _platform_radius : float
        - _base_joint_angles : list[float]
        - _platform_joint_angles : list[float]
        - _servo_horn_length : float
        - _rod_length : float
        - _home_height : float
        - _base_joints : list[Vector3]
        - _platform_joints_local : list[Vector3]
        --
        + __init__(config: PlatformConfig)
        + get_base_joints() : list[Vector3]
        + get_platform_joints_local() : list[Vector3]
        + get_platform_joints_world(pose: Pose) : list[Vector3]
        + get_leg_vectors(pose: Pose) : list[Vector3]
        + get_leg_lengths(pose: Pose) : list[float]
        + compute_home_height() : float
    }

    Pose -r-> Vector3 : translation,\nrotation
    PlatformGeometry --> Pose
}

' ════════════════════════════════════════════════════════════
' RAD 2 HOEYRE – Maskinvare
' ════════════════════════════════════════════════════════════
package "hardware" #E3F2FD {

    class I2CBus {
        - _bus_number : int
        - _bus : smbus2.SMBus
        --
        + read_byte_data(addr, reg) : int
        + write_byte_data(addr, reg, val) : None
        + read_block_data(addr, reg, len) : list[int]
        + write_block_data(addr, reg, data) : None
        + close() : None
    }

    class PCA9685Driver {
        - _bus : I2CBus
        - _address : int
        - _frequency : int
        --
        + reset() : None
        + set_frequency(freq_hz: int) : None
        + set_pwm(channel, on, off) : None
        + set_pulse_width_us(channel, pulse_us) : None
        + set_all_pwm(on, off) : None
        + sleep() / wake() : None
    }

    interface IMUInterface <<abstract>> {
        + {abstract} configure(**kwargs) : None
        + {abstract} read_acceleration() : Vector3
        + {abstract} read_gyroscope() : Vector3
        + {abstract} read_temperature() : float
        + {abstract} who_am_i() : int
        + {abstract} reset() : None
    }

    class LSM6DSOXDriver {
        - _bus : I2CBus
        - _address : int
        - _accel_range : AccelRange
        - _gyro_range : GyroRange
        - _data_rate : DataRate
        --
        + configure(accel_range, gyro_range, data_rate) : None
        .. implementerer IMUInterface ..
    }

    enum AccelRange {
        G2 .. G16
    }

    enum GyroRange {
        DPS125 .. DPS2000
    }

    enum DataRate {
        ODR_12_5_HZ .. ODR_833_HZ
    }

    ' Interne relasjoner – IMU-hierarki
    IMUInterface <|.. LSM6DSOXDriver

    ' Felles I2C-buss
    PCA9685Driver -u-> I2CBus
    LSM6DSOXDriver -u-> I2CBus

    ' Enum-konfigurasjon (kun LSM6DSOX)
    LSM6DSOXDriver .r.> AccelRange
    LSM6DSOXDriver .r.> GyroRange
    LSM6DSOXDriver .r.> DataRate
}

' ════════════════════════════════════════════════════════════
' RAD 3 VENSTRE – Invers kinematikk
' ════════════════════════════════════════════════════════════
package "kinematics" #FFFDE7 {

    class InverseKinematics {
        - _geometry : PlatformGeometry
        - _servo_configs : list[ServoConfig]
        --
        + __init__(geometry: PlatformGeometry, servo_configs: list[ServoConfig])
        + solve(pose: Pose) : list[float]
        - _compute_leg_lengths(pose: Pose) : list[float]
        - _leg_length_to_servo_angle(leg: Vector3, idx: int) : float
        + is_pose_reachable(pose: Pose) : bool
        + get_workspace_bounds() : tuple[Pose, Pose]
    }
}

' ════════════════════════════════════════════════════════════
' RAD 3 HOEYRE – Servo-styring
' ════════════════════════════════════════════════════════════
package "servo" #F3E5F5 {

    class Servo {
        - _config : ServoConfig
        - _driver : PCA9685Driver
        - _current_angle_deg : float
        --
        + __init__(config: ServoConfig, driver: PCA9685Driver)
        + set_angle(angle_deg: float) : None
        + get_angle() : float
        + angle_to_pulse_us(angle_deg: float) : int
        + is_within_limits(angle_deg: float) : bool
        + go_home() : None
        + detach() : None
    }

    class ServoArray {
        - _driver : PCA9685Driver
        - _servos : list[Servo]
        --
        + __init__(configs: list[ServoConfig], driver: PCA9685Driver)
        + set_angles(angles: list[float]) : None
        + get_angles() : list[float]
        + go_home() : None
        + detach_all() : None
        + validate_angles(angles: list[float]) : bool
        + __getitem__(index: int) : Servo
    }

    ServoArray "1" *-d- "6" Servo
}

' ════════════════════════════════════════════════════════════
' RAD 4 VENSTRE – Sikkerhet
' ════════════════════════════════════════════════════════════
package "safety" #FFEBEE {

    enum SafetySeverity {
        WARNING = "warning"
        ERROR = "error"
        CRITICAL = "critical"
    }

    class SafetyCheckResult <<dataclass>> {
        + is_safe : bool = True
        + violations : list[str]
        + severity : SafetySeverity
    }

    class SafetyMonitor {
        - _config : SafetyConfig
        - _servo_configs : list[ServoConfig]
        - _last_pose : Pose
        - _last_time : float
        - _emergency_stopped : bool
        --
        + __init__(config: SafetyConfig, servo_configs: list[ServoConfig])
        + validate_pose(pose: Pose) : bool
        + validate_servo_angles(angles: list[float]) : bool
        + validate_velocity(current: Pose, prev: Pose, dt: float) : bool
        + validate_imu_readings(accel: Vector3) : bool
        + trigger_emergency_stop() : None
        + reset_emergency_stop() : None
        + is_emergency_stopped() : bool
        + check_all(pose, angles, accel, dt) : SafetyCheckResult
    }

    SafetyMonitor -r-> SafetyCheckResult : produserer
    SafetyCheckResult -r-> SafetySeverity
}

' ════════════════════════════════════════════════════════════
' RAD 4 HOEYRE – Regulering og kontroll
' ════════════════════════════════════════════════════════════
package "control" #E0F7FA {

    class PIDController {
        - _gains : PIDGains
        - _integral : float
        - _previous_error : float
        - _previous_time : float
        --
        + __init__(gains: PIDGains)
        + update(setpoint: float, measurement: float, dt: float) : float
        + reset() : None
        + set_gains(gains: PIDGains) : None
    }

    class IMUFusion {
        - _alpha : float
        - _current_orientation : Vector3
        - _last_time : float
        --
        + __init__(alpha: float = 0.98)
        + update(accel: Vector3, gyro: Vector3, dt: float) : Vector3
        + get_orientation() : Vector3
        + reset() : None
    }

    class PoseController {
        - _controllers : list[PIDController]
        --
        + __init__(gains: PIDGains)
        + update(target: Pose, current: Pose, dt: float) : Pose
        + reset() : None
        + set_gains(gains: PIDGains) : None
    }

    class MotionController {
        - _config : PlatformConfig
        - _servo_array : ServoArray
        - _base_imu : IMUInterface
        - _ik_solver : InverseKinematics
        - _pose_controller : PoseController
        - _imu_fusion : IMUFusion
        - _safety_monitor : SafetyMonitor
        - _target_pose : Pose
        - _current_pose : Pose
        - _running : bool
        - _loop_rate_hz : float
        --
        + __init__(config: PlatformConfig)
        + initialize() : None
        + set_target_pose(pose: Pose) : None
        + start() : None
        + stop() : None
        + emergency_stop() : None
        + step() : None
        + get_current_pose() : Pose
        + get_servo_angles() : list[float]
        + is_running() : bool
        + shutdown() : None
    }

    PoseController "1" *-- "6" PIDController : en per DOF
    MotionController --> PoseController
    MotionController --> IMUFusion
}

' ════════════════════════════════════════════════════════════
' Relasjoner mellom pakker
' Kun primaere avhengigheter – typer som brukes i
' metodesignaturer (Pose, Vector3) vises ikke som egne
' piler for aa unngaa kryss.
' ════════════════════════════════════════════════════════════

' ── Rad 1 → Rad 2 (config → geometry / hardware) ─────────
PlatformGeometry ..> PlatformConfig

' ── Rad 2 → Rad 3 (geometry → kinematics, hardware → servo)
InverseKinematics --> PlatformGeometry
Servo ..> ServoConfig
Servo ..> PCA9685Driver

' ── Rad 3 → Rad 4 (kinematics/servo → control/safety) ────
MotionController --> InverseKinematics
MotionController --> ServoArray
MotionController --> SafetyMonitor
MotionController --> IMUInterface
MotionController ..> PlatformConfig

SafetyMonitor ..> SafetyConfig
PIDController ..> PIDGains

' ── Skjulte lenker for aa styre layout ────────────────────
geometry -[hidden]r- hardware
kinematics -[hidden]r- servo
safety -[hidden]r- control
config -[hidden]d- geometry
config -[hidden]d- hardware
geometry -[hidden]d- kinematics
hardware -[hidden]d- servo
kinematics -[hidden]d- safety
servo -[hidden]d- control

@enduml
